[package]
name = "alloy-to-reth-types"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
eyre = "0.6.12"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }

# alloy
alloy-provider = { version = "0.15.5" }
alloy-rpc-types-eth = "0.15.5"

# reth
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "dd4aa1a", features = ["reth-codec"] }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "dd4aa1a" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", rev = "dd4aa1a" }
